[workspace]
members = ["xtask", "rar-common"]

[package]
name = "RootAsRole"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0"
rust-version = "1.76.0"
authors = ["Eddie Billoir <eddie.billoir@irit.fr>"]
edition = "2021"
default-run = "sr"
description = "An alternative to sudo that uses Linux capabilities and Role based access control."
license = "GPL-3.0-or-later"
repository = "https://github.com/LeChatP/RootAsRole"
homepage = "https://lechatp.github.io/RootAsRole/"
keywords = ["sudo", "capabilities", "rbac", "linux", "security"]
categories = ["command-line-utilities", "os::linux-apis", "config"]
exclude = ["sudoers-reader/*", "book/*"]

[badges]
maintainance ={ status = "actively-maintained", badge = "https://img.shields.io/badge/maintenance-actively%20maintained-brightgreen.svg" }


[profile.release]
strip = "symbols"
lto = true
opt-level = "s"
codegen-units = 1

#[features]
#cursive_lib = [ "cursive" ]
#srlibs = [ "pam-client", "bitflags" ]

[[bin]]
name = "sr"
path = "src/sr/main.rs"
required-features = ["finder"]


[[bin]]
name = "chsr"
path = "src/chsr/main.rs"

[features]
default = ["finder"]
finder = ["dep:pcre2", "rar-common/pcre2", "rar-common/finder"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }


[build-dependencies]
serde_json = "1.0.128"
toml = "0.8.13"

[dependencies]
rar-common = { path = "rar-common" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
libc = "0.2.159"
strum = { version = "0.26.3", features = ["derive"] }
semver = { version = "1.0.23", features = ["serde"] }
nix = { version = "0.29.0", features = ["user","process", "signal", "fs"] }
capctl = "0.2.4"
pcre2 = { version = "0.2.7", optional = true }
serde = { version = "1.0.210", features=["rc"] }
serde_json = "1.0.128"
ciborium = "0.2.2"
glob = "0.3.1"
pam-client = { version = "0.5.0", git = "https://gitlab.com/LeChatP/rust-pam-client.git" }
pam-sys = { version = "1.0.0-alpha.5", git = "https://gitlab.com/LeChatP/pam-sys.git" }
bitflags = { version = "2.6.0" }
shell-words = "1.1.0"
syslog-tracing = "0.3.0"
linked_hash_set = { version = "0.1.4" }
derivative = "2.2.0"
sha2 = "0.10.8"
chrono = "0.4.38"
pty-process = "0.4.0"
once_cell = "1.20.2"
pest = "2.7.14"
pest_derive = "2.7.14"
const_format = "0.2.33"
hex = "0.4.3"

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2.12", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }


[package.metadata.deb]
maintainer = "Eddie Billoir <lechatp@outlook.fr>"
license-file = "LICENSE"
depends = "libpam0g, libpam-modules, libpcre2-8-0"
section = "admin"
priority = "optional"
assets =    [
    ["target/release/sr", "usr/bin/sr", "0555"],
    ["target/release/chsr", "usr/bin/chsr", "0555"],
    ["target/man/sr.8.gz",      "usr/share/man/man8/sr.8.gz", "0644"],
    ["target/man/chsr.8.gz",    "usr/share/man/man8/chsr.8.gz", "0644"],
    ["target/man/fr/sr.8.gz",   "usr/share/man/fr/man8/sr.8.gz", "0644"],
    ["target/man/fr/chsr.8.gz", "usr/share/man/fr/man8/chsr.8.gz", "0644"]
]
preserve-symlinks = true
conf-files = ["/etc/pam.d/sr", "/etc/security/rootasrole.json"]
maintainer-scripts = "target/release/"
extended-description = "RootAsRole is a project to allow Linux/Unix administrators to delegate their administrative tasks access rights to multiple co-administrators through RBAC model and Linux Capabilities features."
changelog = "target/debian/changelog"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sr", dest = "/usr/bin/sr", user = "root", group = "root", mode = "0555", caps = "=p" },
    { source = "target/release/chsr", dest = "/usr/bin/chsr", user = "root", group = "root", mode = "0555" },
    { source = "resources/rh/rh_sr_pam.conf", dest = "/etc/pam.d/sr", user = "root", group = "root", mode = "0644", config = true },
    { source = "resources/rootasrole.json", dest = "/etc/security/rootasrole.json", user = "root", group = "root", mode = "0644", config = true },
    { source = "target/man/sr.8.gz", dest = "/usr/share/man/man8/sr.8.gz", user = "root", group = "root", mode = "0644", doc = true },
    { source = "target/man/chsr.8.gz", dest = "/usr/share/man/man8/chsr.8.gz" , user = "root", group = "root", mode = "0644", doc = true },
    { source = "target/man/fr/sr.8.gz", dest = "/usr/share/man/fr/man8/sr.8.gz", user = "root", group = "root", mode = "0644", doc = true },
    { source = "target/man/fr/chsr.8.gz", dest = "/usr/share/man/fr/man8/chsr.8.gz", user = "root", group = "root", mode = "0644", doc = true }
]
post_install_script = "resources/rh/postinst.sh"
post_install_script_flags = 0b101

pre_uninstall_script = "resources/rh/prerm.sh"
pre_uninstall_script_flags = 0b101

[package.metadata.generate-rpm.requires]
pam = "*"
pcre2 = "*"

