[workspace]
members = ["xtask", "rar-common"]

[package]
name = "rootasrole"
version = "3.2.3"
rust-version = "1.83.0"
authors = ["Eddie Billoir <lechatp@outlook.fr>"]
edition = "2021"
default-run = "dosr"
description = "A better alternative to sudo(-rs)/su"
license = "LGPL-3.0-or-later"
repository = "https://github.com/LeChatP/RootAsRole"
homepage = "https://lechatp.github.io/RootAsRole/"
keywords = ["sudo", "capabilities", "rbac", "linux", "security"]
categories = ["command-line-utilities", "os::linux-apis", "config"]
exclude = ["sudoers-reader/*", "book/*"]


[badges]
maintainance ={ status = "actively-maintained", badge = "https://img.shields.io/badge/maintenance-actively%20maintained-brightgreen.svg" }


[profile.release]
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
strip = "none"
lto = false
opt-level = 1
inherits = "release"
debug = true

[[bin]]
name = "dosr"
path = "src/sr/main.rs"
required-features = ["finder"]


[[bin]]
name = "chsr"
path = "src/chsr/main.rs"
required-features = ["editor"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["finder"]

[features]
finder = ["plugins", "timeout", "pcre2", "glob", "rar-common/finder", "dep:nonstick", "dep:libpam-sys", "dep:pty-process", "dep:once_cell"]
glob = ["rar-common/glob"]
pcre2 = ["dep:pcre2", "rar-common/pcre2"]
plugins = ["hashchecker", "ssd", "hierarchy"]
hashchecker = ["dep:hex", "dep:sha2"]
ssd = []
hierarchy = []
timeout = []
editor = ["dep:landlock", "dep:libseccomp", "dep:pest", "dep:pest_derive", "dep:linked_hash_set"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[build-dependencies]
toml = { version = "0.8", default-features = false, features = ["parse", "display", "preserve_order"] }

[dependencies]
rar-common = { path = "rar-common", version = "3.2.3", package = "rootasrole-core" }
log = { version = "0.4", default-features = false, features = ["std"] }
libc = { version = "0.2", default-features = false, features = ["std"]}
strum = { version = "0.26", default-features = false, features = ["derive"] }
nix = { version = "0.29", features = ["user", "process", "signal", "fs"] }
capctl = { version = "0.2", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features=["std", "rc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
cbor4ii = { version = "1.0.0", default-features = false, features = ["serde", "serde1", "use_std"] }
shell-words = { version = "1.1", default-features = false, features = ["std"] }
derivative = { version = "2.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["now"] }
const_format = { version = "0.2", default-features = false }
bon = { version = "3", default-features = false }
konst = { version = "0.3", default-features = false, features = ["parsing_proc", "iter"]}
## dosr
nonstick = { version = "0.1.1", optional = true }
libpam-sys = { version = "0.2.0", default-features = false, optional = true }
pcre2 = { version = "0.2", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
pty-process = { version = "0.4", default-features = false, optional = true }
once_cell = { version = "1.20", default-features = false, optional = true, features = ["std"] }
## chsr
pest = { version = "2.7", default-features = false, features = ["std"], optional = true }
pest_derive = { version = "2.7", default-features = false, features = ["std"], optional = true }
linked_hash_set = { version = "0.1", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true, features = ["alloc"]}
landlock = { version = "0.4", optional = true }
libseccomp = { version = "0.3", optional = true }

[dev-dependencies]
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false }
test-log = { version = "0.2", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
