[package]
name = "capable-common"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0-alpha.5"
edition = "2021"

[features]
default = []
user = ["aya"]
kernel = ["aya-ebpf"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }
aya-ebpf = { git = "https://github.com/aya-rs/aya", optional = true }
bitflags = "2.6.0"

[lib]
path = "src/lib.rs"
