[package]
name = "capable"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0-alpha.5"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
capable-common = { path = "../capable-common", features = ["user"] }
anyhow = "1.0.86"
env_logger = "0.11.3"
libc = "0.2.155"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tabled = "0.15.0"
capctl = "0.2.3"
nix = { version = "0.29.0", features = ["user", "signal", "sched"] }
shell-words = "1.1.0"
serde = { version = "1.0.203", features=["rc", "derive"] }
serde_json = "1.0.117"
unshare = { version = "0.7.0" }

[[bin]]
name = "capable"
path = "src/main.rs"
