[package]
name = "rootasrole-core"
version = "3.1.0"
edition = "2021"
description = "This core crate contains the RBAC and main features for the RootAsRole project."
license = "LGPL-3.0-or-later"

[dependencies]
libc = "0.2"
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
nix = { version = "0.29", features = ["user","process", "signal", "fs", "hostname"] }
capctl = "0.2"
pcre2 = { version = "0.2", optional = true }
serde = { version = "1.0.210", features=["rc", "derive"] }
serde_json = "1.0.132"
glob = { version = "0.3", optional = true }
bitflags = { version = "2.5" }
shell-words = "1.1"
linked_hash_set = { version = "0.1" }
derivative = "2.2"
sha2 = "0.10"
chrono = "0.4"
once_cell = "1.19"
hex = "0.4"
log = "0.4"
syslog = "7.0"
env_logger = "0.11"
bon = { version = "3.3.2", features = ["experimental-overwritable"] }
cbor4ii = { version = "1.0.0", features = ["serde", "serde1", "use_std"] }
konst = "0.3.16"

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
test-log = { version = "0.2" }

[build-dependencies]
serde = { version = "1.0.210", features=["rc", "derive"] }
serde_json = "1.0.132"

[features]
pcre2 = ["dep:pcre2"]
finder = ["dep:glob"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
