[package]
name = "rootasrole-core"
version = "3.2.0"
edition = "2021"
description = "This core crate for the RootAsRole project."
license = "LGPL-3.0-or-later"
authors = ["Eddie Billoir <lechatp@outlook.fr>"]
repository = "https://github.com/LeChatP/RootAsRole"
homepage = "https://lechatp.github.io/RootAsRole/"
keywords = ["sudo", "capabilities", "rbac", "linux", "security"]

[dependencies]
libc = "0.2"
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
nix = { version = "0.29", features = ["user","process", "signal", "fs", "hostname"] }
capctl = "0.2"
pcre2 = { version = "0.2", optional = true }
serde = { version = "1.0", features=["rc", "derive"] }
serde_json = "1.0"
glob = { version = "0.3", optional = true }
bitflags = { version = "2.9" }
shell-words = "1.1"
linked_hash_set = { version = "0.1" }
derivative = "2.2"
sha2 = "0.10"
chrono = "0.4"
once_cell = "1.20"
hex = "0.4"
log = "0.4"
syslog = "6.0"
env_logger = "0.11"
bon = { version = "3", features = ["experimental-overwritable"] }
cbor4ii = { version = "1.0", features = ["serde", "serde1", "use_std"] }
konst = "0.3"

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
test-log = { version = "0.2" }

[build-dependencies]
serde = { version = "1.0", features=["rc", "derive"] }
serde_json = "1.0"

[features]
default = ["pcre2", "glob"]
pcre2 = ["dep:pcre2"]
glob = ["dep:glob"]
finder = ["pcre2", "glob"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
