[package]
name = "rootasrole-core"
version = "3.3.0"
edition = "2021"
description = "This core crate for the RootAsRole project."
license = "LGPL-3.0-or-later"
authors = ["Eddie Billoir <lechatp@outlook.fr>"]
repository = "https://github.com/LeChatP/RootAsRole"
homepage = "https://lechatp.github.io/RootAsRole/"
keywords = ["sudo", "capabilities", "rbac", "linux", "security"]

[dependencies]
libc = { version= "0.2", default-features = false, features = ["std"] }
strum = { version = "0.26", default-features = false, features = ["derive", "std"] }
semver = { version = "1.0", default-features = false, features = ["std", "serde"] }
nix = { version = "0.29", features = ["user","process", "signal", "fs", "hostname"] }
capctl = { version= "0.2", default-features = false, features = ["std", "serde"] }
pcre2 = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features=["std", "rc", "derive"] }
serde_json = { version= "1.0", default-features = false, features = ["std"] }
glob = { version = "0.3", default-features = false, optional = true }
bitflags = { version = "2.9", default-features = false }
linked_hash_set = { version = "0.1", default-features = false }
derivative = { version= "2.2", default-features = false }
chrono = { version= "0.4", default-features = false }
log = { version= "0.4", default-features = false }
syslog = { version= "6.0", default-features = false }
env_logger = { version= "0.11", default-features = false }
bon = { version = "3", default-features = false, features = ["experimental-overwritable"] }
cbor4ii = { version = "1.0", default-features = false, features = ["serde", "serde1", "use_std"] }
konst = { version= "0.3", default-features = false }

[dev-dependencies]
log = { version= "0.4", default-features = false }
test-log = { version = "0.2", default-features = false }
serde_test = "1.0"

[build-dependencies]
serde = { version = "1.0", default-features = false, features= ["rc", "derive"] }
serde_json = { version= "1.0", default-features = false }

[features]
default = ["pcre2", "glob"]
pcre2 = ["dep:pcre2"]
glob = ["dep:glob"]
finder = ["pcre2", "glob"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
