[package]
name = "role-manager"
version = "3.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

#[dependencies.sudoers_reader]
#path = "libs/sudoers_reader"

[dependencies]
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
clap = { version = "4.3.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
cursive = "0.20.0"
lazy_static = "1.4.0"
libc = "0.2.139"
users = "0.11.0"
