[package]
name = "role-manager"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "chsr"
path = "src/main.rs"

[profile.release]
debug = 1

[rust]
debuginfo-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies.sudoers_reader]
#path = "libs/sudoers_reader"

[dependencies]
tracing =  { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
semver = { workspace = true }
nix = { workspace = true }
clap = { version = "4.3.0", features = ["derive"] }
cursive = "0.20.0"
lazy_static = "1.4.0"
capctl = "0.2.3"