[package]
name = "RootAsRole"
version = "3.0.0-alpha.4"
edition = "2021"

[[bin]]
name = "sr"
path = "src/main.rs"

[dependencies]
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3.17"
semver = "1.0.18"
capctl = "0.2.3"
shell-words = "1.1.0"
glob = "0.3.1"
pam-client = "0.5.0"
bitflags = "2.4.0"
pcre2 = "0.2.4"
clap = { version = "4.3.21", features = ["derive"] }
nix = { version = "0.26.2", features = ["user"] }
serde = { version = "1.0.183", features = ["derive"] }
ciborium = "0.2.1"
chrono = "0.4.26"
va_list = "0.1.4"

