[package]
name = "RootAsRole"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "sr"
path = "src/main.rs"

[dependencies]
tracing =  { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
semver = { workspace = true }
nix = { workspace = true, features = ["user"] }
capctl = "0.2.3"
shell-words = "1.1.0"
glob = "0.3.1"
pam-client = "0.5.0"
bitflags = "2.4.0"
pcre2 = "0.2.4"
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
ciborium = "0.2.1"
chrono = "0.4.26"
va_list = "0.1.4"

