[package]
name = "xtask"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0-alpha.5"
edition = "2021"

[dependencies]
rar-common = { path = "../rar-common" }
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["rc"] }
serde_json = "1.0.127"
semver = { version = "1.0.23" }
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
capctl = "0.2.4"
nix = { version = "0.29.0", features = ["user","process", "signal", "fs"] } 
glob = "0.3.1"
