[package]
name = "xtask"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.4"
edition = "2021"
publish = false

[[bin]]
name = "postinst"
path = "src/postinst.rs"

[[bin]]
name = "prerm"
path = "src/prerm.rs"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["rc", "derive"] }
serde_json = "1.0.127"
semver = { version = "1.0.23" }
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
capctl = "0.2.4"
nix = { version = "0.29.0", features = ["user","process", "signal", "fs"] } 
glob = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["cli", "ebpf", "deploy"]
cli = []
ebpf = []
deploy = []

[lints.rust]
dead-code = { level = "allow" }
